--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -4,29 +4,32 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>ArcGIS JavaScript Tutorials: Create a Starter App</title>
-    <style>
-        html, body, #viewDiv {
+    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=5l-NlAAbA1fJzLXQ-z6ja7gatvnGEe_yl2oR_nN8v7x9b21qnpZL7lE7EctTmOVXhL6Y8FRErVHCCELSQZvvq-bKzD44pxK6LkZ9pRAqBQbrcUUzHrPzxIwegxFKeqwBAO6hDdpYweLFo72DXe2L4g" charset="UTF-8"></script><style>
+    html, body, #viewDiv {
         padding: 0;
         margin: 0;
         height: 100%;
         width: 100%;
-        }
-    </style>
+    }
+</style>
 
     <link rel="stylesheet" href="https://js.arcgis.com/4.13/esri/css/main.css">
     <script src="https://js.arcgis.com/4.13/"></script>
 
     <script>
-    var pointGraphic = {};
-    pointGraphic.point = [];
-    pointGraphic.longitude = [];
-    pointGraphic.latitude = [];
+        var pointGraphic = {};
+        pointGraphic.point = [];
+        pointGraphic.longitude = [];
+        pointGraphic.latitude = [];
 
-    const minLatitude=-90;
-    const maxLatitude=90;
-    const minLongitude=-180;
-    const maxLongitude=180;
-    const maxCoordinateDelta=20;
+        const minLatitude=-90;
+        const maxLatitude=90;
+        const minLongitude=-180;
+        const maxLongitude=180;
+        const maxCoordinateDelta=20;
+        const numberOfPoints=30;
+
+        let points =[];
 
         require([
             "esri/Map",
@@ -35,80 +38,94 @@
             "esri/layers/GraphicsLayer"
         ], function(Map, MapView, Graphic, GraphicsLayer) {
 
-                var map = new Map({
-                    basemap: "topo-vector"
-                });
+            var map = new Map({
+                basemap: "topo-vector"
+            });
 
-                var view = new MapView({
-                    container: "viewDiv",
-                    map: map,
-                    center: [-118.80500, 34.02700],
-                    zoom: 2
-                });
-                /*var routeTask = new RouteTask({
-                    url: "https://utility.arcgis.com/usrsvcs/appservices/Miraxez/rest/services/World/Route/NAServer/Route_World/solve"
-                });*/
-                var graphicsLayer = new GraphicsLayer();
+            var view = new MapView({
+                container: "viewDiv",
+                map: map,
+                center: [-118.80500, 34.02700],
+                zoom: 2
+            });
+
+            var simpleMarkerSymbol = {
+                type: "simple-marker",
+                color: [0, 0, 0],
+                size: 5,
+                outline: {
+                    color: [255, 255, 255],
+                    width: 1
+                }
+            };
+
+            var simpleLineSymbol = {
+                type: "simple-line",
+                color: [226, 119, 40], // orange
+                width: 1
+            };
+
+
+            /*var routeTask = new RouteTask({
+                url: "https://utility.arcgis.com/usrsvcs/appservices/Miraxez/rest/services/World/Route/NAServer/Route_World/solve"
+            });*/
+
+            for (var i = 0; i < numberOfPoints; i++) {
+                if (i==0){
+                    pointGraphic.longitude[i]  = getRandomLongitude();
+                    pointGraphic.latitude[i]  = getRandomLatitude();
+                }
+                else {
+                    pointGraphic.longitude[i]  = getNextLongitude(pointGraphic.longitude[i-1], maxCoordinateDelta);
+                    pointGraphic.latitude[i]  = getNextLatitude(pointGraphic.latitude[i-1],maxCoordinateDelta);
+                    console.log(pointGraphic.latitude[i], pointGraphic.longitude[i])
+                }
+                var point = {
+                    type: "point",
+                    longitude: pointGraphic.longitude[i],
+                    latitude: pointGraphic.latitude[i]
+                };
+
+                points.push(point);
+
+                drawPolyline(points, map, GraphicsLayer);
+
+            }
+
+            function drawPolyline(points) {
+                let graphicsLayer = new GraphicsLayer();
                 map.add(graphicsLayer);
 
-                for (var i = 0; i < 30; i++) {
-                    if (i==0){
-                        pointGraphic.longitude[i]  = getRandomLongitude();
-                        pointGraphic.latitude[i]  = getRandomLatitude();
-                    }
-                    else {
-                        pointGraphic.longitude[i]  = getNextLongitude(pointGraphic.longitude[i-1], maxCoordinateDelta);
-                        pointGraphic.latitude[i]  = getNextLatitude(pointGraphic.latitude[i-1],maxCoordinateDelta);
-                        console.log(pointGraphic.latitude[i], pointGraphic.longitude[i])
-                    }
-                    var point = {
-                            type: "point",
-                            longitude: pointGraphic.longitude[i],
-                            latitude: pointGraphic.latitude[i]
-                       };
-
-                    var simpleMarkerSymbol = {
-                        type: "simple-marker",
-                        color: [0, 0, 0],
-                        size: 5,
-                        outline: {
-                        color: [255, 255, 255],
-                        width: 1
-                        }
-                    };
-
+                points.forEach(function(point, i, points){
                     pointGraphic.point[i] = new Graphic({
                         geometry: point,
                         symbol: simpleMarkerSymbol
                     });
 
                     if (i > 0) {
-                        var simpleLineSymbol = {
-                            type: "simple-line",
-                            color: [226, 119, 40], // orange
-                            width: 1
-                        };
 
                         var polyline = {
-                                type: "polyline",
-                                paths: [
-                                    [pointGraphic.longitude[i-1], pointGraphic.latitude[i-1]],
-                                    [pointGraphic.longitude[i], pointGraphic.latitude[i]]
-                                ]
-                            };
+                            type: "polyline",
+                            paths: [
+                                [pointGraphic.longitude[i-1], pointGraphic.latitude[i-1]],
+                                [pointGraphic.longitude[i], pointGraphic.latitude[i]]
+                            ]
+                        };
 
                         var polylineGraphic = new Graphic({
                             geometry: polyline,
                             symbol: simpleLineSymbol
                         })
-
-                        
                     }
-
                     graphicsLayer.add(pointGraphic.point[i]);
                     graphicsLayer.add(polylineGraphic);
-                }
-            });
+                });
+
+            }
+
+        });
+
+
 
         function getRandomLatitude() {
             return (getRandomFloat(minLatitude,maxLatitude));
@@ -121,10 +138,6 @@
         function getRandomFloat(min, max) {
             return (Math.random()* max-min + min);
         }
-
-        /*function getCoordinateWithinSquare(startCoordinate, squareSide) {
-            return (Math.random()* 2 * squareSide - squareSide + startCoordinate);
-        }*/
 
         function getNextLatitude(previousLatitude, maxDelta) {
             let nextLatitude = getNextCoordinate(previousLatitude,maxDelta,minLatitude,maxLatitude);
@@ -151,5 +164,5 @@
     </script>
 </head>
 <body>
-    <div id="viewDiv"></div>
+<div id="viewDiv"></div>
 </body>
